ci: debos: upload artifacts to fileserver
Create an unique id based on repository, workflow run id, and workflow
run attempt.

Repository name is under the control of the submitter, but GitHub
restricts organization and repository names to safe characters.

Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/.github/workflows/debos.yml
+++ b/.github/workflows/debos.yml
@@ -26,6 +26,8 @@ defaults:
 env:
   INCUS_IMAGE: images:debian/trixie/arm64
   INCUS_NAME: debos
+  FILESERVER_DIR: /srv/gh-runners/quic-yocto/builds
+  FILESERVER_URL: https://quic-yocto-fileserver-1029608027416.us-central1.run.app
 
 # cancel in progress builds for this workflow triggered by the same ref
 concurrency:
@@ -96,4 +98,22 @@ jobs:
               debos -b qemu --scratchsize 4GiB qualcomm-linux-debian.yaml
           EOF
           ) | sudo incus exec "${INCUS_NAME}" -- sh
+
+      - name: Upload artifacts to fileserver
+        run: |
+          set -x
+          # curl will be used to talk to fileserver; should be installed by
+          # default
+          sudo apt -y install curl
+          # github runs are only unique per repository and may also be re-run;
+          # create an unique id with repository, run id, and run attempt
+          id="${GITHUB_REPOSITORY}-${GITHUB_RUN_ID}-${GITHUB_RUN_ATTEMPT}"
+          # create a directory for the current run
+          dir="${FILESERVER_DIR}/${id}"
+          mkdir -vp "${dir}"
+          # copy output files
+          cp -v disk.img "${dir}"
+          # instruct fileserver to publish this directory
+          url="${FILESERVER_URL}/${id}/"
+          curl -X POST -H 'Accept: text/event-stream' "${url}"
 
