debos: Compress final image
Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/.github/workflows/debos.yml
+++ b/.github/workflows/debos.yml
@@ -118,8 +118,8 @@ jobs:
           dir="${FILESERVER_DIR}/${id}"
           mkdir -vp "${dir}"
           # copy output files
-          cp -v disk-ufs.img "${dir}"
-          cp -v disk-sdcard.img "${dir}"
+          cp -v disk-ufs.img.gz "${dir}"
+          cp -v disk-sdcard.img.gz "${dir}"
           # instruct fileserver to publish this directory
           url="${FILESERVER_URL}/${id}/"
           curl -X POST -H 'Accept: text/event-stream' "${url}"
