--- a/debos-recipes/qualcomm-linux-debian-image.yaml
+++ b/debos-recipes/qualcomm-linux-debian-image.yaml
@@ -17,9 +17,9 @@ actions:
     description: Use OS device tree override (board specific)
     chroot: true
     command: |
-      set -eu
-      mkdir -p /etc/kernel
-      echo {{ $dtb }} >/etc/kernel/devicetree
+      set -eux
+      mkdir -pv /etc/kernel
+      echo "{{ $dtb }}" >/etc/kernel/devicetree
 {{- end }}
 
   # parttype values are from:
@@ -72,7 +72,7 @@ actions:
     description: Create task to grow root filesystem on first boot
     chroot: true
     command: |
-      set -eu
+      set -eux
       # for growpart
       apt -y install cloud-guest-utils
       # extract the dev of the root filesystem from fstab; change UUID=id into
@@ -97,5 +97,5 @@ actions:
 
   - action: run
     postprocess: true
-    command: gzip -f "${ARTIFACTDIR}/{{ $image }}"
+    command: gzip -v -f "${ARTIFACTDIR}/{{ $image }}"
 
