image: Add description to compression action
Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/debos-recipes/qualcomm-linux-debian-image.yaml
+++ b/debos-recipes/qualcomm-linux-debian-image.yaml
@@ -96,6 +96,7 @@ actions:
       systemctl enable debos-grow-rootfs
 
   - action: run
+    description: Compress image file
     postprocess: true
     command: gzip -v -f "${ARTIFACTDIR}/{{ $image }}"
 
