debos recipes: Add missing descriptions
Be consistent in always having a description for each action.

Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/debos-recipes/qualcomm-linux-debian-rootfs.yaml
+++ b/debos-recipes/qualcomm-linux-debian-rootfs.yaml
@@ -5,6 +5,7 @@ architecture: arm64
 
 actions:
   - action: debootstrap
+    description: Bootstrap initial filesystem
     # NB: not currently configurable
     suite: trixie
     components:
@@ -190,6 +191,7 @@ actions:
 {{- end }}
 
   - action: pack
+    description: Create root filesystem tarball
     file: rootfs.tar.gz
     compression: gz
 
