--- a/.github/workflows/debos-aws.yml
+++ b/.github/workflows/debos-aws.yml
@@ -35,9 +35,9 @@ jobs:
       - buildspec-override:true #This tells our self-hosted runner to upload artifacts
     container:
       image: public.ecr.aws/docker/library/debian:trixie
-      volumes:
-        - /efs/qli/metaqcom/gh-runners/quic-yocto/builds:/fileserver-builds
-      options: --privileged
+      #volumes:
+      #  - /efs/qli/metaqcom/gh-runners/quic-yocto/builds:/fileserver-builds
+      #options: --privileged
     steps:
       - uses: actions/checkout@v4
         with:
