--- a/.github/workflows/debos-aws.yml
+++ b/.github/workflows/debos-aws.yml
@@ -37,7 +37,7 @@ jobs:
       image: public.ecr.aws/docker/library/debian:trixie
       #volumes:
       #  - /efs/qli/metaqcom/gh-runners/quic-yocto/builds:/fileserver-builds
-      #options: --privileged
+      options: --privileged
     steps:
       - uses: actions/checkout@v4
         with:
