--- a/.github/workflows/debos.yml
+++ b/.github/workflows/debos.yml
@@ -38,11 +38,26 @@ jobs:
       image: debian:trixie
       volumes:
         - /srv/gh-runners/quic-yocto/builds:/fileserver-builds
+        - /srv/gh-runners/quic-yocto/downloads/qcom-deb-images:/fileserver-downloads
       options: --privileged
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Copy Linux deb and U-Boot for RB1 from fileserver's downloads
+        run: |
+            set -ux
+            mkdir -v local-debs
+            # copy linux-image but not the -dbg e.g.
+            # linux-image-6.15.0-..._6.15.0...-1_arm64.deb but not
+            # linux-image-6.15.0-...-dbg_6.15.0...-1_arm64.deb
+            find /fileserver-downloads/linux-deb-latest/ \
+                -name linux-image\*.deb \
+                -not -name linux-image\*-dbg_\*.deb \
+                -exec cp -av '{}' local-debs/ \;
+            # copy U-Boot RB1 binary
+            cp -av /fileserver-downloads/u-boot-rb1-latest/rb1-boot.img .
 
       # make sure we have latest packages first, to get latest fixes and to
       # avoid an automated update while we're building
@@ -60,7 +75,7 @@ jobs:
         run: |
           set -x
           # start by building the root filesystem
-          debos qualcomm-linux-debian-rootfs.yaml
+          debos -t localdebs:local-debs/ qualcomm-linux-debian-rootfs.yaml
           # debos tries KVM and UML as backends, and falls back to
           # building directly on the host, but that requires loop
           # devices; use qemu backend explicitly even if it's slower
@@ -72,7 +87,7 @@ jobs:
           debos -b qemu --scratchsize 4GiB -t imagetype:sdcard \
               qualcomm-linux-debian-image.yaml
           # build flashable files
-          debos qualcomm-linux-debian-flash.yaml
+          debos -t u_boot_rb1:rb1-boot.img qualcomm-linux-debian-flash.yaml
 
       - name: Upload artifacts to fileserver
         run: |
