--- a/.github/workflows/debos-aws.yml
+++ b/.github/workflows/debos-aws.yml
@@ -4,14 +4,14 @@ on:
   # allow manual runs
   workflow_dispatch:
   # run on pull requests to the main branch
-  pull_request:
-    branches: [main]
+  #pull_request:
+  #  branches: [main]
   # run on pushes to the main branch
-  push:
-    branches: [main]
+  #push:
+  #  branches: [main]
   # run daily at 8:30am
-  schedule:
-    - cron: '30 8 * * *'
+  #schedule:
+  #  - cron: '30 8 * * *'
   
 # only need permission to read repository; implicitely set all other
 # permissions to none
