flash: Add support for RB1
README: document new u_boot_rb1 option

Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/debos-recipes/qualcomm-linux-debian-flash.yaml
+++ b/debos-recipes/qualcomm-linux-debian-flash.yaml
@@ -1,3 +1,8 @@
+{{- $build_rb1 := "false" -}}
+{{- if .u_boot_rb1 -}}
+{{- $build_rb1 := "true" }}
+{{- end -}}
+
 architecture: arm64
 
 actions:
@@ -7,6 +12,15 @@ actions:
     name: qcom-ptool
     filename: qcom-ptool.tar.gz
     unpack: true
+
+{{- if .u_boot_rb1 }}
+  # TODO: consider switching to https://releases.linaro.org/96boards/rb1/qualcomm/firmware/RB1_firmware_20231124-v4.zip instead
+  - action: download
+    description: Download RB1 rescue image
+    url: https://releases.linaro.org/96boards/rb1/linaro/rescue/23.12/rb1-bootloader-emmc-linux-47528.zip
+    name: qrb2210-rb1_rescue-image.zip
+    filename: qrb2210-rb1_rescue-image.zip
+{{- end }}
 
   - action: download
     description: Download QCM6490 boot binaries
@@ -21,7 +35,7 @@ actions:
     filename: rb3gen2-vision-kit_cdt.zip
 
   - action: run
-    description: Generate flash directories for UFS boards
+    description: Generate flash directories for eMMC and UFS boards
     chroot: false
     command: |
       set -eux
@@ -30,6 +44,43 @@ actions:
 
       # path to unpacked qcom-ptool tarball
       QCOM_PTOOL="${ROOTDIR}/../qcom-ptool.tar.gz.d/qcom-ptool-main"
+
+{{- if .u_boot_rb1 }}
+      ### board: qrb2210-rb1
+      # unpack rescue image
+      unzip -j "${ROOTDIR}/../qrb2210-rb1_rescue-image.zip" \
+          -d build/qrb2210-rb1_rescue-image
+      # TODO: on RB1, we don't generate partition files with ptool since its
+      # partitions.conf does not have entries for data files from the rescue
+      # image, while the rescue image defines useful partitions such as the ESP
+      flash_dir="${ARTIFACTDIR}/flash_rb1"
+      rm -rf "${flash_dir}"
+      mkdir -v "${flash_dir}"
+      # copy rescue image files
+      cp --preserve=mode,timestamps -v build/qrb2210-rb1_rescue-image/* \
+          "${flash_dir}"
+      # copy RB1 U-Boot binary to u-boot-abootimg.img
+      cp --preserve=mode,timestamps -v "${ARTIFACTDIR}/{{- .u_boot_rb1 -}}" \
+          "${flash_dir}/rb1-boot.img"
+
+      # update flashing file for RB1 U-Boot; in the rescue image, this
+      # partition is blanked with boot-erase.img
+      sed -i '/label="boot_a"/s/filename="[^"]*"/filename="rb1-boot.img"/' "${flash_dir}"/rawprogram*.xml
+
+      # update flashing files for ESP image; in the rescue image, this
+      # partition is blanked with boot-erase.img
+      sed -i '/label="esp"/s#filename="[^"]*"#filename="../disk-sdcard.img1"#' "${flash_dir}"/rawprogram*.xml
+
+      # update flashing files for rootfs image;; in the rescue image, this
+      # partition is not provisioned
+      sed -i '/label="rootfs"/s#filename="[^"]*"#filename="../disk-sdcard.img2"#' "${flash_dir}"/rawprogram*.xml
+
+      # TODO: there is currently no dtb.bin alike system with the RB1 firmware
+
+      # TODO: currently not providing CDT; it's present in
+      # RB1_firmware_20231124-v4.zip but not in
+      # rb1-bootloader-emmc-linux-47528.zip
+{{- end }}
 
       ## platform: QCM6490
       # unpack boot binaries
@@ -45,6 +96,8 @@ actions:
           # partitions.conf sets --type=emmc, nand or ufs
           if grep -F '^--disk --type=ufs ' "${conf}"; then
               touch flash-ufs
+          elif grep -F '^--disk --type=emmc ' "${conf}"; then
+              touch flash-emmc
           fi
           "${QCOM_PTOOL}/ptool.py" -x ptool-partitions.xml
       )
