--- a/.github/workflows/debos.yml
+++ b/.github/workflows/debos.yml
@@ -106,12 +106,15 @@ jobs:
           cp -av dtbs.tar.gz "${dir}"
           cp -av disk-ufs.img.gz "${dir}"
           cp -av disk-sdcard.img.gz "${dir}"
-          tar -cvf "${dir}"/flash.tar.gz \
+          # TODO: separate flash_* directories between UFS and eMMC
+          tar -cvf "${dir}"/flash-ufs.tar.gz \
               disk-ufs.img1 \
               disk-ufs.img2 \
+              flash_rb3*
+          tar -cvf "${dir}"/flash-emmc.tar.gz \
               disk-sdcard.img1 \
               disk-sdcard.img2 \
-              flash_*
+              flash_rb1*
           # instruct fileserver to publish this directory
           url="${FILESERVER_URL}/${id}/"
           curl -X POST -H 'Accept: text/event-stream' "${url}"
