debos: rootfs: Update Android boot count
Mark Android boot partition as successfully booted as to prevent the
Android bootloader from going to the secondary or recovery boot
partitions.

Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/debos-recipes/qualcomm-linux-debian-rootfs.yaml
+++ b/debos-recipes/qualcomm-linux-debian-rootfs.yaml
@@ -191,6 +191,15 @@ actions:
           /etc/apt/sources.list.d/debian-experimental.sources
 {{- end }}
 
+  # this is currently needed on boards such as RB1 which are using Android
+  # bootloader to check the boot count of the boot_a/boot_b partitions
+  - action: apt
+    description: Support boards chainloading from Android bootloader
+    recommends: true
+    packages:
+      # marks the current Android boot partition as booted successfully
+      - qbootctl
+
 {{- if ne $localdebs "none" }}
   - action: overlay
     description: Overlay local debs directory {{ $localdebs }} to /root/
