--- a/debos-recipes/qualcomm-linux-debian-image.yaml
+++ b/debos-recipes/qualcomm-linux-debian-image.yaml
@@ -136,3 +136,5 @@ actions:
     postprocess: true
     command: gzip -v -f "${ARTIFACTDIR}/{{ $image }}"
 
+# Copyright (c) Qualcomm Technologies, Inc. and/or its subsidiaries.
+# SPDX-License-Identifier: BSD-3-Clause
