Linux deb: split out kernel config fragment
Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -61,7 +61,7 @@ jobs:
             apt -y install git crossbuild-essential-arm64 make flex bison bc \
                 libelf-dev libssl-dev libssl-dev:arm64 dpkg-dev \
                 debhelper-compat kmod python3 rsync coreutils
-            scripts/build-linux-deb.sh
+            scripts/build-linux-deb.sh kernel-configs/systemd-boot.config
 
       - name: Upload results to fileserver
         run: |
