debos: rootfs: Add userspace needed for ath10k
On RB1, ath10k requires a few userspace utilities to talk to the modem
remoteproc. Add these to the rootfs:
- qrtr-tools
- tqftpserv

Also temporarily add rmtfs until Debian picks up the change to not
require it anymore from upstream (Debian #1104039).

Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/debos-recipes/qualcomm-linux-debian-rootfs.yaml
+++ b/debos-recipes/qualcomm-linux-debian-rootfs.yaml
@@ -39,6 +39,16 @@ actions:
       - network-manager
       # standard networking files (/etc/hosts, /etc/services etc.)
       - netbase
+      # Qualcomm's IPC Router protocol; needed for WiFi on some ath10k devices
+      # such as on RB1
+      - qrtr-tools
+      # Qualcomm Remote Filesystem Service; this is a dependency of the
+      # tqftpserv service, but it's actually not needed on RB1
+      # TODO drop me once https://bugs.debian.org/1104039 is fixed
+      - rmtfs
+      # TFTP server implementation for the QRTR protocol; needed for WiFi on
+      # some ath10k devices such as on RB1
+      - tqftpserv
       # dynamic device nodes handling
       - udev
       # database of radio emission regulations; needed for WiFi
