debos: rootfs: Install firmware from sid
Workaround firmware in testing being too old by upgrading to the sid
version.

Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/debos-recipes/qualcomm-linux-debian-rootfs.yaml
+++ b/debos-recipes/qualcomm-linux-debian-rootfs.yaml
@@ -175,6 +175,28 @@ actions:
       - firmware-qcom-soc
       - linux-image-arm64
 
+  # XXX this is a workaround until firmware-non-free migrates to testing; it
+  # might make sense to have a generic mechanism to do this
+  - action: run
+    description: Install firmware packages from unstable
+    chroot: true
+    command: |
+      set -eux
+      # add sid APT sources
+      cat >/etc/apt/sources.list.d/debian-sid.sources <<EOF
+      Types: deb
+      URIs: http://deb.debian.org/debian/
+      Suites: sid
+      Components: main non-free-firmware
+      Signed-By: /usr/share/keyrings/debian-archive-keyring.gpg
+      EOF
+      # update and install kernel from experimental
+      apt update
+      apt -y install -t unstable firmware-atheros firmware-qcom-soc
+      # remove sid APT sources and update again
+      rm -f /etc/apt/sources.list.d/debian-sid.sources
+      apt update
+
 {{- if eq $experimentalkernel "true" }}
   # this is an optional temporary option to install the kernel from
   # experimental until trixie/sid have a recent enough kernel, or some overlay
