--- a/.github/workflows/debos.yml
+++ b/.github/workflows/debos.yml
@@ -18,11 +18,6 @@ on:
 permissions:
   contents: read
 
-defaults:
-  # run all commands from the debos-recipes directory
-  run:
-    working-directory: debos-recipes
-
 env:
   # github runs are only unique per repository and may also be re-run; create a
   # build id for the current run
@@ -51,7 +46,7 @@ jobs:
       - name: Copy Linux deb and U-Boot for RB1 from fileserver's downloads
         run: |
           set -ux
-          mkdir -v local-debs
+          mkdir -v debos-recipes/local-debs
           dir="/fileserver-downloads/qcom-deb-images"
           # copy linux-image but not the -dbg e.g.
           # linux-image-6.15.0-..._6.15.0...-1_arm64.deb but not
@@ -59,7 +54,7 @@ jobs:
           find "${dir}/linux-deb-latest/" \
               -name linux-image\*.deb \
               -not -name linux-image\*-dbg_\*.deb \
-              -exec cp -av '{}' local-debs/ \;
+              -exec cp -av '{}' debos-recipes/local-debs/ \;
           # copy U-Boot RB1 binary
           cp -av "${dir}/u-boot-rb1-latest/rb1-boot.img" .
 
@@ -88,11 +83,12 @@ jobs:
           # whole build is done from memory and the out of memory killer
           # gets triggered
           debos -b qemu --scratchsize 4GiB -t imagetype:ufs \
-              qualcomm-linux-debian-image.yaml
+              debos-recipes/qualcomm-linux-debian-image.yaml
           debos -b qemu --scratchsize 4GiB -t imagetype:sdcard \
-              qualcomm-linux-debian-image.yaml
+              debos-recipes/qualcomm-linux-debian-image.yaml
           # build flashable files
-          debos -t u_boot_rb1:rb1-boot.img qualcomm-linux-debian-flash.yaml
+          debos -t u_boot_rb1:rb1-boot.img \
+              debos-recipes/qualcomm-linux-debian-image.yaml
 
       - name: Upload artifacts to fileserver
         run: |
