workflows: debos: Consistent use of set -ux
Signed-off-by: Loïc Minier <loic.minier@oss.qualcomm.com>

--- a/.github/workflows/debos.yml
+++ b/.github/workflows/debos.yml
@@ -99,7 +99,7 @@ jobs:
 
       - name: Upload artifacts to fileserver
         run: |
-          set -x
+          set -ux
           # curl will be used to talk to fileserver; should be installed by
           # default
           apt -y install curl
