--- a/.github/workflows/debos.yml
+++ b/.github/workflows/debos.yml
@@ -24,6 +24,9 @@ defaults:
     working-directory: debos-recipes
 
 env:
+  # github runs are only unique per repository and may also be re-run; create a
+  # build id for the current run
+  BUILD_ID: ${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt }}
   FILESERVER_URL: https://quic-yocto-fileserver-1029608027416.us-central1.run.app
 
 # cancel in progress builds for this workflow triggered by the same ref
@@ -96,11 +99,8 @@ jobs:
           # curl will be used to talk to fileserver; should be installed by
           # default
           apt -y install curl
-          # github runs are only unique per repository and may also be re-run;
-          # create an unique id with repository, run id, and run attempt
-          id="${GITHUB_REPOSITORY}-${GITHUB_RUN_ID}-${GITHUB_RUN_ATTEMPT}"
           # create a directory for the current run
-          dir="/fileserver-builds/${id}"
+          dir="/fileserver-builds/${BUILD_ID}"
           mkdir -vp "${dir}"
           # copy output files
           cp -av rootfs.tar.gz "${dir}"
@@ -117,6 +117,6 @@ jobs:
               disk-sdcard.img2 \
               flash_rb1*
           # instruct fileserver to publish this directory
-          url="${FILESERVER_URL}/${id}/"
+          url="${FILESERVER_URL}/${BUILD_ID}/"
           curl -X POST -H 'Accept: text/event-stream' "${url}"
 
